--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Gra TEB Edukacja</title>
     <style>
-      /* Reset stylów przeglądarki */
+      /* Reset i Ustawienia Podstawowe */
       html, body {
         height: 100%;
         width: 100%;
         margin: 0;
         padding: 0;
-        background-color: #020617;
-        overflow: hidden; /* Blokuje paski przewijania */
-        touch-action: none; /* Blokuje gesty systemowe (odświeżanie, cofanie) */
+        background-color: #020617; /* Kolor tła strony (taki sam jak gry) */
+        overflow: hidden;
+        touch-action: none;
       }
 
-      /* Centrowanie gry */
+      /* Kontener Gry - Flexbox Centering */
       #app {
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+
+      /* Fix dla Phasera w trybie FIT - upewniamy się, że canvas nie ma dziwnych marginesów */
+      #app canvas {
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+        box-shadow: 0 0 20px rgba(0,0,0,0.5); /* Ładny cień wokół gry na laptopie */
       }
     </style>
   </head>
